# creo-barcode-plugin

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  run_property_tests.bat  run_tests.bat  插入图片说明.md  测试步骤.md
creo-barcode-plugin/: .gitignore  build_plugin.bat  使用说明.md
creo-barcode-plugin/include/: barcode_c_api.h  batch_processor.h  config_manager.h  creo_com_bridge.h  data_sync_checker.h  drawing_interface.h  error_codes.h  settings_dialog.h  version_check.h
creo-barcode-plugin/resources/: default_config.json
creo-barcode-plugin/src/: barcode_c_api.cpp  barcode_generator.cpp  batch_processor.cpp  config_manager.cpp  creo_barcode.def  logger.cpp  main.cpp  main_minimal.c  version_check.cpp
creo-barcode-plugin/tests/: property_tests.cpp  test_barcode_generator.cpp  test_batch_processor.cpp  test_config_manager.cpp  test_version_check.cpp
creo-barcode-plugin/text/chinese_cn/: msg_barcode.txt
creo-barcode-plugin/text/ribbon/: barcode_ribbon.rbn
creo-barcode-plugin/text/usascii/: msg_barcode.txt
include/: barcode_generator.h  creo_vbapi_types.h  logger.h  menu_manager.h
src/: barcode_pure_c.c  creo_com_bridge.cpp  data_sync_checker.cpp  drawing_interface.cpp  main_pure_c.c  main_simple.cpp  menu_manager.cpp  settings_dialog.cpp
tests/: CMakeLists.txt  test_data_sync_checker.cpp  test_settings_dialog.cpp
text/chinese_cn/: CommandMenu.txt
text/ribbon/: barcode.rbn
text/usascii/: CommandMenu.txt  menu_def.txt  usermsg.txt
